# vomid

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.markdown  build-windows.sh  mingw32.toolchain  vomid.pro
src/: file.cpp  file.h  main.cpp  player.cpp  player.h  slot_proxy.cpp  slot_proxy.h  util.h  w_file.cpp  w_file.h  w_file.ui  w_file_info.cpp  w_file_info.h  w_file_info.ui  w_main.cpp  w_main.h  w_main.ui  w_piano.cpp  w_piano.h  w_track.cpp  w_track.h  w_track.ui
